@@ -23,15 +23,20 @@ import java.util.List;
 
 import org.apache.cassandra.audit.AuditLogContext;
 import org.apache.cassandra.audit.AuditLogEntryType;
+import org.apache.cassandra.config.DatabaseDescriptor;
 import org.apache.cassandra.cql3.*;
 import org.apache.cassandra.cql3.conditions.ColumnCondition;
 import org.apache.cassandra.cql3.conditions.Conditions;
 import org.apache.cassandra.cql3.restrictions.StatementRestrictions;
 import org.apache.cassandra.db.Clustering;
+import org.apache.cassandra.db.Keyspace;
 import org.apache.cassandra.db.Slice;
 import org.apache.cassandra.db.partitions.PartitionUpdate;
+import org.apache.cassandra.exceptions.InvalidRequestException;
+import org.apache.cassandra.exceptions.UnauthorizedException;
 import org.apache.cassandra.schema.ColumnMetadata;
 import org.apache.cassandra.schema.TableMetadata;
+import org.apache.cassandra.service.ClientState;
 import org.apache.cassandra.utils.ByteBufferUtil;
 import org.apache.cassandra.utils.Pair;
 import org.apache.commons.lang3.builder.ToStringBuilder;
@@ -323,6 +328,18 @@ public class UpdateStatement extends ModificationStatement
                                        conditions,
                                        attrs);
         }
+    }
+
+    @Override
+    public void authorize(ClientState state) throws InvalidRequestException, UnauthorizedException
+    {
+        /* Check space here rather than ModificationStatement as that is also extended by DeleteStatement,
+         * and users should be able to reduce their space usage by deletion regardless of quota settings.
+         */
+        if (DatabaseDescriptor.getEnableKeyspaceQuotas() && Keyspace.open(keyspace()).disabledForWrites)
+            throw new UnauthorizedException("Disk Quota hit on " + keyspace() + ". Please reduce size usage to re-enable writing.");
+
+        super.authorize(state);
     }
     
     @Override
