@@ -34,6 +34,7 @@ import java.util.concurrent.locks.Lock;
 import java.util.stream.Stream;
 
 import com.google.common.annotations.VisibleForTesting;
+import com.google.common.base.Function;
 import com.google.common.collect.Iterables;
 import com.google.common.util.concurrent.RateLimiter;
 import org.slf4j.Logger;
@@ -116,6 +117,17 @@ public class Keyspace
     private volatile ReplicationParams replicationParams;
     private final KeyspaceRepairManager repairManager;
     private final SchemaProvider schema;
+
+    /** If the keyspace is past its quota, we will disable write access until it's reduced */
+    public volatile boolean disabledForWrites = false;
+
+    public static final Function<String,Keyspace> keyspaceTransformer = new Function<String, Keyspace>()
+    {
+        public Keyspace apply(String keyspaceName)
+        {
+            return Keyspace.open(keyspaceName);
+        }
+    };
 
     private static volatile boolean initialized = false;
 
