@@ -5993,6 +5993,26 @@ public class StorageService extends NotificationBroadcasterSupport implements IE
         ClientResourceLimits.setGlobalLimit(newLimit);
     }
 
+    public boolean isKeyspaceQuotaEnabled()
+    {
+        return DatabaseDescriptor.getEnableKeyspaceQuotas();
+    }
+
+    public void setKeyspaceQuotaEnabled(boolean enabled)
+    {
+        DatabaseDescriptor.setKeyspaceQuotasEnabled(enabled);
+    }
+
+    public long getDefaultKeyspaceQuotaBytes()
+    {
+        return DatabaseDescriptor.getDefaultKeyspaceQuotaBytes();
+    }
+
+    public void setDefaultKeyspaceQuotaBytes(long quotaInBytes)
+    {
+        DatabaseDescriptor.setDefaultKeyspaceQuotaBytes(quotaInBytes);
+    }
+
     @Override
     public long getNativeTransportMaxConcurrentRequestsInBytesPerIp()
     {
